--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "vinxi start"
+    "start": "vinxi start",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.120.9",
@@ -19,10 +20,16 @@
     "vinxi": "^0.5.6"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "lint-staged": {
+    "*": ["biome check --write --no-errors-on-unmatched"]
   }
 }
