--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
+    "autoprefixer": "^10.4.21",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4"
   },
