--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-router": "^1.120.9",
     "@tanstack/react-start": "^1.120.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "vinxi": "^0.5.6"
   },
   "devDependencies": {
