--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-router": "^1.120.9",
     "@tanstack/react-start": "^1.120.9",
+    "date-fns": "^4.1.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
