--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-router": "^1.120.9",
     "@tanstack/react-start": "^1.120.9",
@@ -21,7 +22,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "vinxi": "^0.5.6"
+    "vinxi": "^0.5.6",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
