--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
-    "@tanstack/react-router": "^1.120.9",
-    "@tanstack/react-start": "^1.120.9",
+    "@tanstack/react-router": "^1.120.11",
+    "@tanstack/react-start": "^1.120.11",
     "date-fns": "^4.1.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "vinxi": "^0.5.6",
-    "zod": "^3.25.28"
+    "zod": "^3.25.29"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@flydotio/dockerfile": "^0.7.10",
     "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
