set minimum age for Renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,7 +8,8 @@
     ":maintainLockFilesWeekly",
     "group:allNonMajor",
     "schedule:earlyMondays",
-    "customManagers:biomeVersions"
+    "customManagers:biomeVersions",
+    "security:minimumReleaseAgeNpm"
   ],
   "labels": ["dependencies"]
 }
